remove italic of blockquote

--- a/styles/markdown.less
+++ b/styles/markdown.less
@@ -77,7 +77,7 @@
         padding-left: 1rem;
         border-left: 4px solid @markdown-border-color;
         color: @markdown-text-muted;
-        font-style: italic;
+        // font-style: italic;
         
         p {
             margin-bottom: 0.5rem;
